unpackaged/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>A subscription to an edition of a publication.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>