unpackaged/main/default/objects/Subscription__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The edition to which the Contact is subscribed.</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>