unpackaged/main/default/objects/Subscription__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>Today()+365</defaultValue>
    <description>Date this subscription expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>