unpackaged/main/default/objects/Subscription__c/fields/Expiration_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Formula__c</fullName>
    <formula>IF( Expiration_Date_From_Contact__c = true, Contact__r.Expiration_Date__c,  Expiration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date [f]</label>
    <type>Date</type>
</CustomField>