unpackaged/main/default/objects/Subscription__c/fields/Expiration_Date_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this Subscription expires on the Expiration Date of its owning Contact
If not checked, it expires on the Expiration Date shown to the left.</description>
    <label>Use Contact Expiration Date</label>
    <type>Checkbox</type>
</CustomField>