unpackaged/main/default/objects/Subscription__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(
    Expiration_Date_From_Contact__c = true,
    IF(  
        Contact__r.Expiration_Date__c &lt;  TODAY(),
        'Y',
        ''
    ),
    IF(
         Expiration_Date__c &lt; TODAY(),
        'Y',
        ''
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired? [f]</label>
    <type>Text</type>
</CustomField>