unpackaged/main/default/objects/Subscription__c/fields/Password_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Password_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Contact Password</label>
    <type>Checkbox</type>
</CustomField>