unpackaged/main/default/objects/Subscription__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The publication to which the Contact is subscribed</description>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>