unpackaged/main/default/objects/Subscription__c/fields/Publication_Formula__c.field-meta.xml
<CustomField>
    <fullName>Publication_Formula__c</fullName>
    <formula>Publication__r.Name &amp; ' ' &amp; Edition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication &amp; Edition [f]</label>
    <type>Text</type>
</CustomField>