unpackaged/main/default/objects/Subscription__c/fields/Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rate at which this subscription renews</description>
    <label>Renewal Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>