unpackaged/main/default/objects/Subscription__c/fields/Renewal_Status_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Contact Renewal Status</label>
    <type>Checkbox</type>
</CustomField>