unpackaged/main/default/objects/Subscription__c/fields/Suspended_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Suspended_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Contact Suspended</label>
    <type>Checkbox</type>
</CustomField>