unpackaged/main/default/objects/Subscription__c/fields/User_Type_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>User_Type_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if checked, the user type of this subscription will come from its Contact
if not, the field to the left will be used.</description>
    <label>Use Contact User Type</label>
    <type>Checkbox</type>
</CustomField>