unpackaged/main/default/objects/Subscription__c/fields/Username_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Username_From_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Contact Username</label>
    <type>Checkbox</type>
</CustomField>